fix filter-bar overflow

--- a/src/scss/resource-listing/filter-bar.scss
+++ b/src/scss/resource-listing/filter-bar.scss
@@ -13,7 +13,7 @@
   @media (min-width: $mobileFilterBreakpoint) {
     background-color: #f8f8f8;
     position: relative;
-    overflow-y: auto;
+    overflow-y: visible;
     width: 35%;
   }
 
